# pg-transact-effectful

./: Makefile  README.md  pg-transact-effectful.cabal
.github/workflows/: ci.yml  linting.yml
src/Effectful/PostgreSQL/: Transact.hs
src/Effectful/PostgreSQL/Transact/: Effect.hs
