cabal-version:      3.0
name:               pg-transact-effectful
version:            0.0.1.0
homepage:           https://github.com/kleidukos/pg-transact-effectful/
bug-reports:        https://github.com/kleidukos/pg-transact-effectful/issues
author:             Hécate Moonlight
maintainer:         Hécate Moonlight
license:            MIT
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE.md
  README.md

source-repository head
  type:     git
  location: https://github.com/kleidukos/pg-transact-effectful

common common-extensions
  default-extensions:
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind
    -Wno-unticked-promoted-constructors

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts=-N

library
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  src
  exposed-modules:
    Effectful.PostgreSQL.Transact
    Effectful.PostgreSQL.Transact.Effect

  build-depends:
    , base               <=4.17
    , effectful-core     ^>=1.0
    , mtl
    , pg-transact
    , postgresql-simple
    , resource-pool

test-suite pg-transact-effectful-test
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Utils
  hs-source-dirs: test
  build-depends:
    , base
    , effectful-core
    , hashable
    , pg-transact-effectful
    , servant
    , servant-server
    , tasty
    , tasty-hunit
