cabal-version:      3.0
name:               pg-transact-effectful
version:            0.0.1.0
homepage:           https://github.com/kleidukos/pg-transact-effectful/
bug-reports:        https://github.com/kleidukos/pg-transact-effectful/issues
author:             Hécate Moonlight
maintainer:         Hécate Moonlight
license:            MIT
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE.md
  README.md

tested-with: GHC == 8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.5 || ==9.6.1

source-repository head
  type:     git
  location: https://github.com/kleidukos/pg-transact-effectful

common common-extensions
  default-extensions:
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind
    -Wno-unticked-promoted-constructors

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts=-N

library
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  src
  exposed-modules:
    Effectful.PostgreSQL.Transact
    Effectful.PostgreSQL.Transact.Effect

  build-depends:
    , base               <4.19.0
    , deepseq
    , effectful-core     ^>=2.2
    , mtl
    , pg-transact
    , postgresql-simple
    , resource-pool      ^>=0.4
